force-app/main/default/objects/Starter_Company_Clients__c/fields/Phase_1_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_1_Start_Date__c</fullName>
    <label>Phase #1 - Start Date</label>
    <type>Date</type>
</CustomField>