force-app/main/default/objects/Starter_Company_Clients__c/fields/Phase_2_GrantApproved__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_GrantApproved__c</fullName>
    <label>Phase #2 - Grant Committee Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>