force-app/main/default/objects/Starter_Company_Clients__c/fields/Plan_to_operate_your_business_in_Ontario__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_operate_your_business_in_Ontario__c</fullName>
    <label>Plan to operate your business in Ontario</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>