force-app/main/default/objects/Starter_Company_Clients__c/fields/Post_Grant_Advisor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Post_Grant_Advisor_Notes__c</fullName>
    <label>Post-Grant Advisor Notes</label>
    <length>90000</length>
    <type>Html</type>
</CustomField>