force-app/main/default/objects/Starter_Company_Clients__c/fields/Prepared_to_work_w_mentor_for_6_months__c.field-meta.xml
<CustomField>
    <fullName>Prepared_to_work_w_mentor_for_6_months__c</fullName>
    <label>Prepared to work w/ mentor for 6 months?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>