force-app/main/default/objects/Starter_Company_Clients__c/fields/Program_Completed__c.field-meta.xml
<CustomField>
    <fullName>Program_Completed__c</fullName>
    <label>Program Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>