force-app/main/default/objects/Starter_Company_Clients__c/fields/Proposing_New_Existing_Business__c.field-meta.xml
<CustomField>
    <fullName>Proposing_New_Existing_Business__c</fullName>
    <label>Proposing a new or existing business?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>