force-app/main/default/objects/Starter_Company_Clients__c/fields/Received_a_Starter_Company_grant_before__c.field-meta.xml
<CustomField>
    <fullName>Received_a_Starter_Company_grant_before__c</fullName>
    <label>Received a Starter Company grant before?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>