force-app/main/default/objects/Starter_Company_Clients__c/fields/Ref_1_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Ref_1_First_Name__c</fullName>
    <label>Ref #1 - First Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>