force-app/main/default/objects/Starter_Company_Clients__c/fields/Ref_1_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ref_1_Phone__c</fullName>
    <label>Ref #1 - Phone</label>
    <type>Phone</type>
</CustomField>