force-app/main/default/objects/Starter_Company_Clients__c/fields/Ref_1_Relationship_to_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Ref_1_Relationship_to_Applicant__c</fullName>
    <label>Ref #1 - Relationship to Applicant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>