force-app/main/default/objects/Starter_Company_Clients__c/fields/Reference_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Reference_2_Email__c</fullName>
    <label>Reference #2 Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>