force-app/main/default/objects/Starter_Company_Clients__c/fields/Send_Grant_Submission_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Grant_Submission_Email__c</fullName>
    <label>Send Grant Submission Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>