force-app/main/default/objects/Starter_Company_Clients__c/fields/StarterSpace_Applicant__c.field-meta.xml
<CustomField>
    <fullName>StarterSpace_Applicant__c</fullName>
    <description>Identifies whether they are a StarterSpace applicant.</description>
    <label>StarterSpace Applicant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>