force-app/main/default/objects/Starter_Company_Clients__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <inlineHelpText>Identify your strengths.</inlineHelpText>
    <label>Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>