force-app/main/default/objects/Starter_Company_Clients__c/fields/Target_Customers_and_Proposed_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Target_Customers_and_Proposed_Pricing__c</fullName>
    <description>Describe your ideal customer. Please indicate the proposed price of your product or service.</description>
    <inlineHelpText>Describe your ideal customer. Please indicate the proposed price of your product or service.</inlineHelpText>
    <label>Target Customers and Proposed Pricing</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>