force-app/main/default/objects/Starter_Company_Clients__c/fields/TESS_Client__c.field-meta.xml
<CustomField>
    <fullName>TESS_Client__c</fullName>
    <description>Requests if they are a TESS client. Used to determine if they can apply for StarterSpace @Crossways.</description>
    <label>Completed Required Training Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>