force-app/main/default/objects/Starter_Company_Clients__c/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <inlineHelpText>Describe your threats.</inlineHelpText>
    <label>Threats</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>