force-app/main/default/objects/Starter_Company_Clients__c/fields/Total_Amount_of_Personal_Funds__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Personal_Funds__c</fullName>
    <label>Total Amount of Personal Funds:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>