force-app/main/default/objects/Starter_Company_Clients__c/fields/TotalMentoringHours__c.field-meta.xml
<CustomField>
    <fullName>TotalMentoringHours__c</fullName>
    <label>Total Mentoring Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>