force-app/main/default/objects/Starter_Company_Clients__c/fields/TotalTrainingHoursCompleted__c.field-meta.xml
<CustomField>
    <fullName>TotalTrainingHoursCompleted__c</fullName>
    <label>Total Training Hours Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>