force-app/main/default/objects/Starter_Company_Clients__c/fields/Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Training_Completed__c</fullName>
    <label>Training Completed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Plan Training (In-Person)</fullName>
            </value>
            <value>
                <fullName>Marketing Workshop (In-Person)</fullName>
            </value>
            <value>
                <fullName>Online Marketing (In-Person)</fullName>
            </value>
            <value>
                <fullName>Getting Free Publicity (In-Person)</fullName>
            </value>
            <value>
                <fullName>Business Forum (2014 - In-Person)</fullName>
            </value>
            <value>
                <fullName>Social Media Seminar (In-Person)</fullName>
            </value>
            <value>
                <fullName>Marketing Seminar (In-Person)</fullName>
            </value>
            <value>
                <fullName>Sales Seminar (In-Person)</fullName>
            </value>
            <value>
                <fullName>Networking Seminar (In-Person)</fullName>
            </value>
            <value>
                <fullName>Cash Flow Seminar (In-Person)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>