force-app/main/default/objects/Starter_Company_Clients__c/fields/Visible_Minority__c.field-meta.xml
<CustomField>
    <fullName>Visible_Minority__c</fullName>
    <label>Visible Minority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>