force-app/main/default/objects/Starter_Company_Clients__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <inlineHelpText>Describe your weaknesses.</inlineHelpText>
    <label>Weaknesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>