force-app/main/default/objects/Starter_Company_Clients__c/fields/X1st_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>X1st_Disbursement__c</fullName>
    <label>1st Disbursement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>