force-app/main/default/objects/Starter_Company_Clients__c/fields/X2nd_Disbursement_Issued__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Disbursement_Issued__c</fullName>
    <label>2nd Disbursement Issued</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>