force-app/main/default/objects/Starter_Company_Clients__c/fields/Year_Completed__c.field-meta.xml
<CustomField>
    <fullName>Year_Completed__c</fullName>
    <description>Year completed last level of education.</description>
    <inlineHelpText>Year completed last level of education.</inlineHelpText>
    <label>Year Completed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>