force-app/main/default/objects/Starter_Company_Clients__c/listViews/Creative_ApplicationsRejected.listView-meta.xml
<ListView>
    <fullName>Creative_ApplicationsRejected</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Phase_1_Application_Approved__c</columns>
    <columns>Phase_2_GrantApproved__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Stream__c</field>
        <operation>equals</operation>
        <value>Creative Arts</value>
    </filters>
    <filters>
        <field>Phase_1_Application_Approved__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <filters>
        <field>Phase_2_GrantApproved__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <label>Creative - Applications (Rejected)</label>
    <sharedTo>
        <role>EDC_Admin</role>
        <role>ES_Admin</role>
        <role>ES_ET</role>
    </sharedTo>
</ListView>