force-app/main/default/objects/Starter_Company_Clients__c/listViews/Creative_Completed.listView-meta.xml
<ListView>
    <fullName>Creative_Completed</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Stream__c</field>
        <operation>equals</operation>
        <value>Creative Arts</value>
    </filters>
    <filters>
        <field>Program_Completed__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Creative - Completed</label>
    <sharedTo>
        <role>EDC_Admin</role>
        <role>ES_Admin</role>
        <role>ES_ET</role>
        <roleAndSubordinates>ES_ET</roleAndSubordinates>
    </sharedTo>
</ListView>