force-app/main/default/objects/Starter_Company_Clients__c/listViews/Creative_GrantReview.listView-meta.xml
<ListView>
    <fullName>Creative_GrantReview</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>TESS_Client__c</columns>
    <columns>Phase_1_Application_Approved__c</columns>
    <columns>Phase_1_Start_Date__c</columns>
    <columns>Phase_2_Biz_Plan_to_Grant_Committee__c</columns>
    <columns>Phase_2_GrantApproved__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Stream__c</field>
        <operation>equals</operation>
        <value>Creative Arts</value>
    </filters>
    <filters>
        <field>Phase_2_GrantApproved__c</field>
        <operation>notEqual</operation>
        <value>Yes,No</value>
    </filters>
    <filters>
        <field>Phase_1_Application_Approved__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Creative - Grant Review</label>
    <sharedTo>
        <role>EDC_Admin</role>
        <role>ES_Admin</role>
        <role>ES_ET</role>
    </sharedTo>
</ListView>