force-app/main/default/objects/Starter_Company_Clients__c/listViews/DMS_ApplicationsRejected.listView-meta.xml
<ListView>
    <fullName>DMS_ApplicationsRejected</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Phase_1_Application_Approved__c</columns>
    <columns>Phase_1_Date_Reviewed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Stream__c</field>
        <operation>equals</operation>
        <value>DMS - Expansion</value>
    </filters>
    <filters>
        <field>Phase_1_Application_Approved__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <label>DMS - Applications (Rejected)</label>
    <sharedTo>
        <role>EDC_Admin</role>
        <role>ES_Admin</role>
        <role>ES_ET</role>
    </sharedTo>
</ListView>