force-app/main/default/objects/Starter_Company_Clients__c/listViews/DMS_ApplicationsToReview.listView-meta.xml
<ListView>
    <fullName>DMS_ApplicationsToReview</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Phase_1_Start_Date__c</columns>
    <columns>Phase_1_Application_Approved__c</columns>
    <columns>Phase_2_Business_Plan_Completed__c</columns>
    <columns>Phase_2_Biz_Plan_to_Grant_Committee__c</columns>
    <columns>Phase_2_GrantApproved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Stream__c</field>
        <operation>equals</operation>
        <value>DMS - Expansion</value>
    </filters>
    <filters>
        <field>Send_Grant_Submission_Email__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Phase_1_Application_Approved__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Phase_2_Business_Plan_Completed__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Phase_2_GrantApproved__c</field>
        <operation>notEqual</operation>
        <value>Yes</value>
    </filters>
    <label>DMS - Applications To Review</label>
    <sharedTo>
        <role>EDC_Admin</role>
        <role>ES_Admin</role>
        <role>ES_ET</role>
    </sharedTo>
</ListView>