force-app/main/default/objects/Starter_Company_Clients__c/listViews/DMS_Current_Grants.listView-meta.xml
<ListView>
    <fullName>DMS_Current_Grants</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Phase_1_Application_Approved__c</columns>
    <columns>Phase_1_Start_Date__c</columns>
    <columns>Phase_2_GrantApproved__c</columns>
    <columns>Date_of_Grant_Approval__c</columns>
    <columns>Amount_of_Grant__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Phase_2_GrantApproved__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Program_Completed__c</field>
        <operation>notContain</operation>
        <value>Yes,No</value>
    </filters>
    <filters>
        <field>Application_Stream__c</field>
        <operation>equals</operation>
        <value>DMS - Expansion</value>
    </filters>
    <label>DMS - Current Grants</label>
    <sharedTo>
        <role>EDC_Admin</role>
        <role>ES_Admin</role>
        <role>ES_ET</role>
    </sharedTo>
</ListView>