force-app/main/default/objects/Starter_Company_Clients__c/listViews/Fashion_Applications.listView-meta.xml
<ListView>
    <fullName>Fashion_Applications</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Application_Stream__c</columns>
    <columns>TESS_Client__c</columns>
    <columns>Phase_1_Application_Approved__c</columns>
    <columns>Phase_2_GrantApproved__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Stream__c</field>
        <operation>equals</operation>
        <value>Fashion Venture</value>
    </filters>
    <label>Fashion - Applications (All)</label>
    <sharedTo>
        <role>EDC_Admin</role>
        <role>ES_Admin</role>
        <role>ES_ET</role>
    </sharedTo>
</ListView>