force-app/main/default/objects/Starter_Company_Clients__c/listViews/Fashion_ApplicationsToReview.listView-meta.xml
<ListView>
    <fullName>Fashion_ApplicationsToReview</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Stream__c</field>
        <operation>equals</operation>
        <value>Fashion Venture</value>
    </filters>
    <filters>
        <field>Phase_1_Application_Approved__c</field>
        <operation>notEqual</operation>
        <value>Yes,No</value>
    </filters>
    <label>Fashion - Applications To Review</label>
    <sharedTo>
        <role>EDC_Admin</role>
        <role>ES_Admin</role>
        <role>ES_ET</role>
    </sharedTo>
</ListView>